# tysettings

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  Makefile  README.md  idf_component.yml  license_header.txt
examples/esp/hello_world/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp/hello_world/main/: main.cpp
examples/posix/hello_world/: CMakeLists.txt  README.md  empty_file.c
examples/posix/hello_world/src/: CMakeLists.txt  app.c  main.cpp
examples/zephyr/hello_world/: CMakeLists.txt  README.md  prj.conf
examples/zephyr/hello_world/src/: CMakeLists.txt  main.cpp
include/tinysettings/: settings.h  tinysettings.hpp
include/tinysettings/platform/: settings.h
include/tysettings/platform/: settings.h
platform/: esp.cmake  posix.cmake  zephyr.cmake
src/: CMakeLists.txt  settings.cpp  tinysettings-config.h  tinysettings.cpp  tysettings-config.h
src/platform/: CMakeLists.txt
src/platform/esp/: CMakeLists.txt  settings.c  tinysettings-esp-config.h  tysettings-esp-config.h
src/platform/posix/: CMakeLists.txt  settings.cpp  settings.hpp  settings_file.cpp  settings_file.hpp  tinysettings-posix-config.h  tysettings-posix-config.h
src/platform/zephyr/: CMakeLists.txt  settings.c  tinysettings-zephyr-config.h  tysettings-zephyr-config.h
zephyr/: module.yml
